<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobiquityTest</string>
    <string name="title_activity_add_effects">AddEffectsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="APP_KEY">9xw1hjze98qix3k</string>
    <string name="APP_SECRET">s1aody01r55kwzb</string>
    <string name="title_activity_image_preview">ImagePreviewActivity</string>
    <string name="app">DropBox Application</string>
    <string name="my_uploads">MY Uploads</string>
    <string name="logout">Logout</string>
   <string name="signin">Signin With Dropbox</string>

    <string name="click">Click A Picture</string>
    <string name="record">Record A Sound</string>
    <string name="upload">Upload to dropbox</string>
    <string name="done">Done</string>
    <string name="gray_effect">gray effect</string>
    <string name="black_effect">black effect</string>
    <string name="brigth_effect">bright effect</string>

</resources>
