<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    tools:context="com.dropbox.android.sample.AddEffectsActivity">

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/upload_button"
        android:padding="20dp"
        android:text="@string/done"
        android:textColor="@color/text_color"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/filter_preview_image_view"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/effect_preview_size"
        android:layout_below="@+id/done_button" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_preview_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/gray_effect_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_preview_image_view"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/upload_button"
            android:padding="5dp"
            android:text="@string/gray_effect"
            android:textColor="@color/dropbox_blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dark_effect_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_preview_image_view"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/upload_button"
            android:padding="5dp"
            android:text="@string/black_effect"
            android:textColor="@color/dropbox_blue"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bright_effect_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_below="@+id/filter_preview_image_view"
            android:layout_margin="20dp"
            android:background="@drawable/upload_button"
            android:padding="5dp"
            android:text="@string/brigth_effect"
            android:textColor="@color/dropbox_blue"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
